# pico-pet

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  TODO.md  blinky.rs  flake.nix  picopet.FCStd  planning_for_intro_scene.md  readme.md
embedded/: Cargo.toml  Makefile
embedded/.cargo/: config.toml
embedded/aseprite/: menu.ase
embedded/assets/font_raw/: icon_font.data
embedded/assets/sound_peat/: ball_game.peat  break_finish.peat  button_beep.peat  ferris_cry.peat  pomodoro_finish.peat
embedded/assets/sound_raw/: 321.beat  ball_game.beat  break_finish.beat  button_beep.beat  countdown_go.beat  ferris_cry.beat  pomodoro_finish.beat
embedded/assets/sprite_ase/: lofi.ase
embedded/assets/sprite_raw/: lofi.data
embedded/sound_peat/: ballgame.peat  break_finish.peat  button_beep.peat  countdown_321.peat  countdown_go.peat  ferris_cry.peat  pomodoro_finish.peat
embedded/sound_raw/: break_finish.beat  button_beep.beat  countdown_321.beat  pomodoro_finish.beat
embedded/sprite_raw/: inventory.png.data  lofi.data
embedded/src/: color.rs  globals.rs  main.rs
embedded/src/audio/: audio_library.rs  audio_player.rs
embedded/src/cores/: mod.rs  primary_core.rs  scene_manager.rs
embedded/src/display/: font.rs  sprite_factory.rs
embedded/src/display_helper/: top_bar.rs
embedded/src/game/: boot.rs  color.rs  exit.rs  globals.rs  irq.rs  mod.rs  setting_value.rs
embedded/src/game/audio/: audio_library.rs  audio_player.rs  audio_track.rs
embedded/src/game/cores/: mod.rs  primary_core.rs  scene_manager.rs  secondary_core.rs
embedded/src/game/cpu_setup/: boot.rs  exit.rs  irq.rs  mod.rs
embedded/src/game/display/: font.rs  mod.rs  render.rs  rgb_converter.rs  sprite.rs  sprite_factory.rs  text_writer.rs
embedded/src/game/display_helper/: top_bar.rs
embedded/src/game/hardware/: audio.rs  hardware.rs  input.rs  rtc.rs
embedded/src/game/hardware/rtc/: dow.rs  interval_date.rs  interval_date_time.rs  interval_time.rs  meridian.rs  mod.rs  month.rs  real_date.rs  real_date_time.rs  real_time.rs
embedded/src/game/nvm/: header.rs  inventory.rs  mod.rs  page_canon.rs  pet.rs  settings.rs
embedded/src/game/scenes/: mod.rs
embedded/src/game/scenes/eat_scene/: eat_scene.rs
embedded/src/game/scenes/intro_scene/: intro_scene.rs  mod.rs
embedded/src/game/scenes/main_scene/: main_scene.rs
embedded/src/game/scenes/nyi_scene/: nyi_scene.rs
embedded/src/game/scenes/pomo_scene/: pomo_scene.rs  timer.rs
embedded/src/game/scenes/settings_scene/: setting_selected.rs  settings_scene.rs
embedded/src/game/scenes/settings_scene/setting_components/: brightness_setting_component.rs  date_setting_component.rs  feeding_deadline_setting_component.rs  long_rest_setting_component.rs  meridian_setting_component.rs  mod.rs  pomo_cycle_setting_component.rs  pomo_time_setting_component.rs  reset_setting_component.rs  short_rest_setting_component.rs  time_setting_component.rs  (+2 more)
embedded/src/game/scenes/stat_scene/: mod.rs  stat_scene.rs
embedded/src/hardware/: hardware.rs  input.rs  rtc.rs
embedded/src/nvm/: header.rs  inventory.rs  mod.rs  page_canon.rs  pet.rs  settings.rs
embedded/src/scenes/main_scene/: main_scene.rs
embedded/src/scenes/nyi_scene/: mod.rs
embedded/src/scenes/pomo_scene/: mod.rs  pomo_scene.rs  timer.rs
embedded/src/scenes/settings_scene/: setting_selected.rs  settings_scene.rs
embedded/src/scenes/settings_scene/setting_components/: brightness_setting_component.rs  feeding_deadline_setting_component.rs  long_rest_setting_component.rs  mod.rs  pomo_cycle_setting_component.rs  pomo_time_setting_component.rs  reset_setting_component.rs  short_rest_setting_component.rs  time_setting_component.rs  volume_setting_component.rs
helpers/peat_track_player/: Cargo.toml  README.md
helpers/peat_track_player/src/: freq.rs  main.rs  model.rs  prelude.rs
helpers/track_editor/: Cargo.toml  README.md
helpers/track_editor/assets/: ballgame.peat  cursive.toml  style.toml
helpers/track_editor/src/: audio.rs  freq.rs  main.rs  model.rs  prelude.rs
helpers/track_editor/src/tui/: mod.rs
helpers/track_editor/src/view/: actions.rs  editor.rs  mod.rs  title.rs
(+205 files in other folders)
