[package]
name = "pico-pet"
edition = "2021"
version = "0.1.0"

[dependencies]
embedded-hal = { version = "0.2.5", features = ["unproven"] }
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7.3", features = ["device"] }
rp2040-boot2 = "0.2.1"
st7735-lcd = "0.9.0"
embedded-time = "0.12.1"
embedded-graphics = "0.8.1"
fugit = "0.3.7"
defmt-rtt = "0.4.0"
waveshare-rp2040-lcd-0-96 = "0.6.0"
debugless-unwrap = "0.0.4"
fixedstr = { version = "0.4.3", default-features = false }

[[bin]]
name = "pico-pet"
path = "src/main.rs"

[profile.release]
# s-level optimization breaks the reboot() function???
# opt-level = 's'
opt-level = 3
lto = true
overflow-checks = false
debug = false
