[package]
name = "peat_track_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20.0", default-features = false, features = ["toml", "crossterm-backend", "term_size"] }
lazy_static = "1.4.0"
rodio = { version = "0.17.3", default-features = false }
