[package]
name = "peat_track_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
cursive = { version = "0.21.1", default-features = false, features = ["toml"] }
lazy_static = "1.4.0"
rodio = { version = "0.17.3", default-features = false }
